src/objects/Channel_Account__c.object
<CustomObject>
    <fields>
        <fullName>Channel_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel Account</description>
        <label>Channel Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Channel Opportunities</relationshipLabel>
        <relationshipName>Chennel_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Opportunity__c</fullName>
        <label>Channel_Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Channel Accounts</relationshipLabel>
        <relationshipName>Channel_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Channel_Account__r.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <formula>TEXT(Channel_Account__r.Role__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <label>Channel Account</label>
    <nameField>
        <displayFormat>OCA{0000000000}</displayFormat>
        <label>Opportunity Channel Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>